5.0.6
Add switch "doNotGetCompanyInfo" to "New-BcEnvironment" to enable skipping getting environment information after environment creation.
Issue #3151 Get-AppSourceProduct returns 404 Not Found
Add parameters exclusiveAccessTicket, path, syncMode, force and skipVersionCheck to Start-BcContainerAppDataUpgrade.

5.0.5
Add new option (exitedContainers) on Flush-ContainerHelperCache. Note that exited containers are NOT remove by the all flag, you need all,exitedContainers
Add resilience to Remove-BcContainerSession
Issue #3116 Publish-NavContainerApp: Exception setting "ServerCertificateCustomValidationCallback": "Cannot convert the "static bool DisabledServerCertificateValidationCallback
Add new parameter -useEnvironmentUpdateWindow to Install-BcAppFromAppSource, to schedule installation of apps to run inside update window
Issue #3118 Docker Pull sends recommendations on the error stream on PowerShell 5
Support building using CompilerFolder on Linux (even when the Linux version of ALC isn't included in the ALLanguage vsix)
Support latest or preview as "magic" values for VsixFile parameter Run-AlPipeline, Run-AlValidation, New-BcContainer and New-BcCompilerFolder) to always get latest or preview marketplace version

5.0.4
Add new parameter -excludeRuntimePackages to Publish-BcContainerApp, to exclude installation of runtime packages
Issue #3061 Remove-BcEnvironment without doNotWait stopped working
Align naming of all SaaS functions. Get-BcEnvironmentUpdateWindow, Get-BcEnvironmentScheduledUpgrade, Get-BcEnvironmentUsedStorage,... (added Alias' for all former names)
Issue #3071 Restart-BCContainer with renewBindings fails because container is not running
Add functions for supporting Alpaca Containers
Issue #3089 Regression: Cannot find path 'C:\Windows\SysWow64\NavSip.dll' because it does not exist.
Issue #3087 Enter-BCContainer on PowerShell 7 doesn't seem to work